quoting-CypressTK1/force-app/main/default/objects/ResourceSplit__c/ResourceSplit__c.object-meta.xml
<CustomObject>
    <label>Resource Split</label>
    <nameField>
        <label>Resource Split Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resource Splits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>