quoting-CypressTK1/force-app/main/default/objects/ResourceSplit__c/fields/LevelAdjustment__c.field-meta.xml
<CustomField>
    <fullName>LevelAdjustment__c</fullName>
    <formula>TaskRoleSummaryId__r.LevelAdjustment__c  *  SplitPercentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Level Adjustment</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>