quoting-CypressTK1/force-app/main/default/objects/ResourceSplit__c/fields/SplitPercentage__c.field-meta.xml
<CustomField>
    <fullName>SplitPercentage__c</fullName>
    <label>Split Percentage</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Percent</type>
</CustomField>