quoting-CypressTK1/force-app/main/default/objects/ResourceSplit__c/fields/TaskRoleSummaryId__c.field-meta.xml
<CustomField>
    <fullName>TaskRoleSummaryId__c</fullName>
    <label>Task Role Summary</label>
    <referenceTo>TaskRoleSummary__c</referenceTo>
    <relationshipLabel>Resource Splits</relationshipLabel>
    <relationshipName>ResourceSplits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>