quoting-CypressTK1/force-app/main/default/objects/ResourceSplit__c/fields/TotalAdjustments__c.field-meta.xml
<CustomField>
    <fullName>TotalAdjustments__c</fullName>
    <formula>TaskRoleSummaryId__r.TotalAdjustments__c  *  SplitPercentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Adjustments</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>