quoting-CypressTK1/force-app/main/default/objects/ResourceSplit__c/fields/TotalEstimatedDuration__c.field-meta.xml
<CustomField>
    <fullName>TotalEstimatedDuration__c</fullName>
    <formula>TaskRoleSummaryId__r.TotalEstimatedDuration__c  *  SplitPercentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Estimated Duration</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>